[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "async-api-client"
version = "0.1.0"
description = "A small resilient async REST client: token-bucket rate limiting, retries with exponential backoff honoring Retry-After, and Link-header pagination."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Musyg" }]
keywords = ["http", "async", "rest", "retry", "rate-limit", "httpx", "pagination"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["async_api_client"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
